--- a/templates/participant_profile/set_photo_profile.html
+++ b/templates/participant_profile/set_photo_profile.html
@@ -14,7 +14,8 @@
             </h4>
             <p>
                 <ul>
-                    <li>asd</li>
+                    <li>Berlatar belakang merah.</li>
+                    <li>Berpakaian rapih dan formal.</li>
                 </ul>
             </p>
         </div>
