--- a/templates/dashboard/participant_detail.html
+++ b/templates/dashboard/participant_detail.html
@@ -32,6 +32,7 @@
                     <img src="{{ participant_name.photoprofile.image.url }}" alt="photo-profile" class="img-fluid" />
                 </li>
                 <a href="" class="list-group-item list-group-item-action disabled judul" tabindex="-1" aria-disabled="true"><b>Data Peserta PPDB</b></a>
+                <a href="{% url 'export-files' pk %}" class="list-group-item list-group-item-action">Unduh Semua Berkas</a>
                 <a href="{% url 'participant-detail' pk %}" class="list-group-item list-group-item-action">Akun Peserta</a>
                 <a href="{% url 'participant-major' pk %}" class="list-group-item list-group-item-action">Jurusan Pilihan</a>
                 <a href="{% url 'participant-graduation' pk %}" class="list-group-item list-group-item-action">Kelulusan</a>
