--- a/templates/participant_profile/re_payment.html
+++ b/templates/participant_profile/re_payment.html
@@ -102,8 +102,15 @@
                             </h4>
                             <hr />
                             <p class="card-text">
-                                Silahkan Mengunggah {{ name }} sesuai kolom yang tersedia, harap melakukan scan terhadap file yang akan di unggah, supaya terlihat jelas. Pembayaran
-                                Daftar Ulang dapat dilakukan maksimal selama tiga kali.
+                                Silahkan Mengunggah {{ name }} sesuai kolom yang tersedia, harap melakukan <b>scan</b> terhadap file yang akan di unggah, supaya terlihat jelas. Pembayaran
+                                Daftar Ulang dapat dilakukan maksimal selama <b>tiga kali</b>.
+                            </p>
+                            <hr />
+                            <p>
+                                Lakukan pembayaran daftar ulang ke Nomor Virtual Account <b>Mandiri</b> dan <b>CIMB Niaga</b>. <br />
+                            </p>
+                            <p>
+                                <span class="card-detail border border-danger rounded p-2">Nomor Virtual Account: {{ data.virt_acc_number  }}</span>
                             </p>
                             <hr />
                             <div class="row px-3">
