--- a/templates/participant_profile/graduation.html
+++ b/templates/participant_profile/graduation.html
@@ -126,7 +126,7 @@
                                         </p>
                                         <a class="btn btn-block btn-primary" href="{% url 'files-upload' %}">Unggah Berkas</a>
                                         {% if data.letter %}
-                                            <a class="btn btn-block btn-outline-danger" href="{{ data.letter.url  }}">Unduh Surat Kelulusan</a>
+                                            <a class="btn btn-block btn-outline-danger" href="{% url 'skl' %}">Unduh Surat Kelulusan</a>
                                         {% endif %}
                                     </div>
                                 </div>
