--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -203,6 +203,7 @@
                         <h5>A. Berkas Pendaftaran</h5>
                         <ul>
                             <li>Scan Kartu Keluarga</li>
+                            <li>Scan Akte Kelahiran</li>
                         </ul>
                         <hr class="my-3">
                         <h5>B. Berkas Daftar Ulang</h5>
@@ -212,8 +213,6 @@
                             <li>Surat Keterangan Tidak Buta Warna dari Puskesmas, RS atau Klinik</li>
                             <li>Scan Rapor Semester 1-5</li>
                             <li>Pas Foto 3x4 sejumlah 4 lembar Latar Merah (Pakai Seragam Sekolah)</li>
-                            <li>Scan Akte Kelahiran</li>
-                            <li>Scan Kartu Keluarga</li>
                             <li>Scan Ijazah (menyusul)</li>
                         </ul>
                     </div>
@@ -344,7 +343,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6">
                             <div class="card-red-gradient text-center card-biaya">
-                                <h2 class="font-weight-bold">Biaya Pendaftaran</h2>
+                                <h2 class="font-weight-bold">Biaya Test Minat Bakat</h2>
                                 <h1 class="font-weight-bold mb-4">Rp 300.000</h1>
                                 <p>Transfer ke No. Rek Bank Mandiri <br> 131 00 154 128 95 <br> Nofrizal</p>
                             </div>
